# stanfordmovies

./: .gitignore  README.rst  icaltest.py  local.CheckStanfordMovieSchedule.plist  m2i  movies.toml.example  movies2ical.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
movies2ical/: constants.py  imdb.py  main.py  movies2ical.py  outputs.py  parse_calendar.py  parse_html.py  schedule_acquire.py  verify.py
src/movies2ical/: main.py
test/: Astaire Rogers Marx_2016.html  Bogart2019_20190131.html  Bogart2019_20190217.html  Bogart2019_20190225.html  British and Lubitsch_2017.html  Christmas_2017.html  Comedy_2017.html  Comedy_2017.old.html  Dec2018_20181129.html  Dec2018_20181206.html  Dec2018_20181218.html  Fox through 1935_2015.html  GeneKelly_20181104.html  Hitch_2016.html  Hitchcock and Others_2018.html  Interim_2016.html  Interim_2016.old.html  Lewton_2017.html  Olivia_2016.html  Olivia_2016.old.html  Paramount 1930-1935_2018.html  Paramount 1930-1935_2018.old.html  Ray2018_20181223.html  Ray2018_20190108.html  Ray2018_20190110.html  Ray2018_20190124.html  Summer_2016.html  Summer_2016.old.html  Vienna_2016.html  Vienna_2016.old.html  Warners_2017.html  Warners_2017.old.html  interim_2017.html  interim_2017.old.html
