[metadata]
name = movies2ical
version = 0.4.0
author = Matthew A. Clapp
author_email = Matthew Clapp <itsayellow+dev@gmail.com>
description = Generate ical files from Stanford Movie Theater calendar webpage.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/itsayellow/stanfordmovies
keywords = movies, ical
classifiers =
    Development Status :: 3 Beta
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    bleach
    beautifulsoup4
    icalendar
    html5lib
    imdbpy>=6.5
    pytz
    requests
    toml
    tzlocal

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    movies2ical = movies2ical.main:cli
